--- a/Css/style.css
+++ b/Css/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     font-family: 'Inclusive Sans', sans-serif;
     background: linear-gradient(70deg, blue, purple, pink);
+    background-repeat: no-repeat;
+    display: flex;
+    flex: 1;
 }
 
 h1 {
@@ -18,6 +21,7 @@ canvas {
 }
 
 .Contenedor {
+    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +41,7 @@ canvas {
 }
 
 .Texto h2 {
-    font-size: 50px;
+    font-size: 40px;
 }
 
 #B12 {
@@ -94,6 +98,10 @@ canvas {
     animation: aparecer 0.5s ease-out;
 }
 
+.Flor {
+    width: 100%;
+}
+
 @keyframes aparecer {
     0% {
       opacity: 0;
@@ -112,6 +120,7 @@ canvas {
 @media (max-width: 468px) {
     body {
         background: linear-gradient(100deg, blue, purple, pink);
-
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 }
